fix: update Databox to work with JDK 11
The current implementation of Databox uses the DatatypeConverter class
which was removed from JDK 11.

This commit replaces any usage of DatatypeConverter with Base64 class,
which is available from JDK 8.

See:
- https://openjdk.java.net/jeps/320
- https://openjdk.java.net/jeps/135